@@ -6,6 +6,7 @@ from fabrix.ioutil import remove_file, remove_directory, create_directory, debug
 from fabrix.system import systemctl_enable, systemctl_disable, systemctl_mask, systemctl_unmask
 from fabrix.system import systemctl_start, systemctl_stop, systemctl_reload, systemctl_restart
 from fabrix.system import systemctl_edit, is_reboot_required, reboot_and_wait, disable_selinux
+from fabrix.system import systemctl_get_default, systemctl_set_default
 from fabrix.rpmyum import yum_install, yum_remove, yum_update
 from fabrix.render import render_template
 
